src/commands/snapshots/wt__commands__configure_shell__tests__fish_completion_content_custom_cmd.snap
---
source: src/commands/configure_shell.rs
expression: "fish_completion_content(\"myapp\")"
---
# worktrunk completions for fish
complete --keep-order --exclusive --command myapp --arguments "(test -n \"\$WORKTRUNK_BIN\"; or set -l WORKTRUNK_BIN (type -P myapp); COMPLETE=fish \$WORKTRUNK_BIN -- (commandline --current-process --tokenize --cut-at-cursor) (commandline --current-token))"
